@@ -1,3 +1,8 @@
+2011-03-14  Richard Sandiford  <richard.sandiford@linaro.org>
+
+	* emultempl/armelf.em (arm_elf_before_allocation): Check dynobj
+	instead of dynamic_sections_created.
+
 2011-03-10  Dave Korn  <dave.korn.cygwin@gmail.com>
 
 	* plugin.c (get_symbols): Use wrapped lookup for undefined symbols.
